# sdk

./: .gitattributes  .gitignore  .gitmodules  README.md  build.zig  build.zig.zon  sdk.sln
.github/workflows/: ci.yml
docs/: sdk-readme.txt
examples/: TinyVG.js  index.htm  index2.htm  usage.c
src/binding/: binding.zig
src/binding/include/: tinyvg.h
src/data/: ground-truth.zig
src/lib/: builder.zig  ground-truth.zig  parsing.zig  rendering.zig  svg.zig  text.zig  tinyvg.zig
src/lib/data/: ground-truth.zig
src/polyfill/: tinyvg.js  tinyvg.zig
src/tools/: gen-index.sh  render.zig  text.zig
src/tools/svg2tvgt/: .gitignore  Cargo.toml  Makefile  svg2tvgt.cs  svg2tvgt.csproj
src/tools/svg2tvgt/src/: main.rs  tvg.rs
